update css and html

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
       <div id="chat_container"></div>
 
       <form >
-        <textarea name="prompt" cols="1" rows="1" placeholder="Ask question...."></textarea>
+        <textarea name="prompt" cols="1" rows="1" placeholder="Ask question or something...."></textarea>
         <button type="submit"><img src="assets/send.svg" /></button>
       </form>
     </div>
